<resources>
    <string name="app_name">Local Services</string>
    <string name="action_settings">Settings</string>
    <string name="app_splash_content">App Splash Screen</string>
    <string name="btn_accept_continue">Accept and Continue</string>
    <string name="price">Price:</string>
    <string name="report">Report</string>
    <string name="distance">Distance:</string>
    <string name="description">Description:</string>
    <string name="message">Message</string>
    <string name="favourite">favourite</string>
    <string name="agreement">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_new_listing">Create New Listing</string>
    <string name="title_account">My Account</string>
    <string name="short_description">Short Description*</string>
    <string name="label_add_image">Add Image</string>
    <string name="label_listing_title">Listing Title*</string>
    <string name="label_price_estimate">Price Estimate*</string>
    <string name="label_long_description">Long Description</string>
    <string name="label_new_listing">New Listing</string>
    <string name="label_tag">Tag</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_title">Login</string>
    <string name="facebook_app_id">2236447399818046</string>
    <string name="fb_login_protocol_scheme">fb2236447399818046</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
