<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:textSize="14sp"
                            android:typeface="normal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/listingTitle"
                            tools:text="Display Name" />

                        <TextView
                            android:id="@+id/report"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="48dp"
                            android:layout_marginEnd="32dp"
                            android:text="@string/report"
                            android:textSize="12sp"
                            android:typeface="normal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/priceHeader" />

                        <TextView
                            android:id="@+id/distanceHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/distance"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:typeface="normal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/description" />

                        <TextView
                            android:id="@+id/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:typeface="normal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/descHeader"
                            tools:text="Service Description" />

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:max="5"
                            android:numStars="5"
                            android:progressTint="#ffe900"
                            android:rating="3.5"
                            android:scaleX="1.25"
                            android:scaleY="1.25"
                            android:stepSize="0.5"
                            app:layout_constraintStart_toEndOf="@id/username"
                            app:layout_constraintTop_toBottomOf="@id/listingTitle" />

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="28dp"
                            android:typeface="normal"
                            app:layout_constraintStart_toEndOf="@id/priceHeader"
                            app:layout_constraintTop_toBottomOf="@id/distance"
                            tools:text="$5 per hour" />

                        <TextView
                            android:id="@+id/priceHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="24dp"
                            android:text="@string/price"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:typeface="normal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/distanceHeader" />

                        <TextView
                            android:id="@+id/listingTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="24dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:typeface="normal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Service Title" />

                        <TextView
                            android:id="@+id/descHeader"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/description"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp"
                            android:typeface="normal"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/carouselView" />

                        <TextView
                            android:id="@+id/reviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:textSize="14sp"
                            android:typeface="normal"
                            app:layout_constraintStart_toEndOf="@id/ratingBar"
                            app:layout_constraintTop_toBottomOf="@id/listingTitle"
                            tools:text="# Reviews" />

                        <Button
                            android:id="@+id/message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="32dp"
                            android:layout_marginBottom="48dp"
                            android:background="@color/colorPrimary"
                            android:text="@string/message"
                            android:textColor="@color/colorWhite"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/priceHeader" />

                        <com.synnapps.carouselview.CarouselView
                            android:id="@+id/carouselView"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginTop="16dp"
                            app:fillColor="@color/colorWhite"
                            app:layout_constraintTop_toBottomOf="@id/username"
                            app:pageColor="#00000000"
                            app:radius="6dp"
                            app:slideInterval="6000"
                            app:strokeColor="@color/colorWhite"
                            app:strokeWidth="2dp" />

                        <TextView
                            android:id="@+id/distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="20dp"
                            android:typeface="normal"
                            app:layout_constraintStart_toEndOf="@id/distanceHeader"
                            app:layout_constraintTop_toBottomOf="@id/description"
                            tools:text="1 to 5 kilometers away" />

                        <ImageView
                            android:id="@+id/favourite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/favourite"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@id/listingTitle"
                            app:srcCompat="@drawable/ic_favorite_black_24dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
</ScrollView>